--- a/app/views/statics/index.html.erb
+++ b/app/views/statics/index.html.erb
@@ -54,13 +54,21 @@
 <body>
   <div id="fb-root"></div>
   <script>
-  // (function(d, s, id) {
-  //     var js, fjs = d.getElementsByTagName(s)[0];
-  //     if (d.getElementById(id)) return;
-  //     js = d.createElement(s); js.id = id;
-  //     js.src = "//connect.facebook.net/zh_TW/sdk.js#xfbml=1&appId=477202859073516&version=v2.0";
-  //     fjs.parentNode.insertBefore(js, fjs);
-  //   }(document, 'script', 'facebook-jssdk'));
+    window.fbAsyncInit = function() {
+      FB.init({
+        appId      : '380171498811984',
+        xfbml      : true,
+        version    : 'v2.2'
+      });
+    };
+
+    (function(d, s, id){
+       var js, fjs = d.getElementsByTagName(s)[0];
+       if (d.getElementById(id)) {return;}
+       js = d.createElement(s); js.id = id;
+       js.src = "//connect.facebook.net/en_US/sdk.js";
+       fjs.parentNode.insertBefore(js, fjs);
+     }(document, 'script', 'facebook-jssdk'));
   </script>
 
   <div id="wrapper">
@@ -231,18 +239,15 @@
             <div id="slider-rev-container">
               <div id="slider-rev">
                 <ul>
-                  <!--<% @banners.each do |banner| %>
+                  <% @banners.each do |banner| %>
                     <% if banner.galleries.first %>
                       <li data-transition="flip" data-slotamount="15" data-masterspeed="400">
-                        <%= link_to banner.description, target: "_blank" do %>
-                        <img src=<%= "#{banner.galleries.first.attachment.url}" %> />
-                        <% end %>
+                        <%# link_to banner.description, target: "_blank" do %>
+                        <img id='bannerFrame' src=<%= "#{banner.galleries.first.attachment.url}" %> />
+                        <%# end %>
                       </li>
                      <% end %>
-                  <% end %>-->
-                  <li data-transition="flip" data-slotamount="15" data-masterspeed="400"><img id="bannerFrame" src="/images/index/slide1.jpg"></li>
-                  <li data-transition="flip" data-slotamount="15" data-masterspeed="400"><img id="bannerFrame" src="/images/index/slide2.jpg"></li>
-                  <li data-transition="flip" data-slotamount="15" data-masterspeed="400"><img id="bannerFrame" src="/images/index/slide3.jpg"></li>
+                  <% end %>
                 </ul><img id="bannerFrame" src="/images/frame_bannerIndex.png">
               </div><!-- End #slider-rev --> 
             </div><!-- End #slider-rev-container --> 
